------------
v2.0.0alpha4
------------




------------
v2.0.0alpha3
------------

|+

------------
v2.0.0alpha2
------------

|+

------------
v2.0.0alpha1
------------


------
v1.2.5
------

[jan] Add Turkish translation (İTÜ BİDB <sistemdestek@itu.edu.tr>).


------
v1.2.4
------

[jan] Add Greek translation (Limperis Antonis <limperis@cti.gr>).


------
v1.2.3
------

[jan] Mark PHP 7 as supported.


------
v1.2.2
------

[jan] Fix issues with certain locales like Turkish.


------
v1.2.1
------

[jan] Support loading translations from Composer-installed package.


------
v1.2.0
------

[mms] Added Horde_ListHeaders#listHeadersExist().


------
v1.1.5
------

[jan] Add Hungarian translation (Andras Galos <galosa@netinform.hu>).


------
v1.1.4
------

[jan] Add Spanish translation (Manuel Perez Ayala <mperaya@alcazaba.unex.es>).


------
v1.1.3
------

[jan] Add Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).


------
v1.1.2
------

[jan] Add German translation.
[mms] Better translations of the list header fields.


------
v1.1.1
------

[jan] Add Danish translation (Erling Preben Hansen <erling@eph.dk>).


------
v1.1.0
------

[mms] Add Horde_ListHeaders#headers().


------
v1.0.1
------

[mms] Use new Horde_Test layout.


------
v1.0.0
------

First stable release for Horde 5.


-----------
v1.0.0beta1
-----------

First beta release for Horde 5.


------------
v1.0.0alpha1
------------

[mms] First alpha release for Horde 5 (imported from IMP).